# ychackathon

./: .env.example  .gitignore  README.md  pyproject.toml  sample.env  uv.toml  yelp_dirty_data.csv  yelp_reviews_test.csv  yelp_reviews_val.csv
agents/: trainer.py
agents/trainer/: trainer.py
data/: dataset.csv
dataprep/: dataprep.ipynb  dataprep.py  main.py  pyproject.toml  requirements.txt  utils.py
frontend/: .env.example  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(default)/: layout.tsx  page.tsx
frontend/src/app/api/analyze/: route.ts
frontend/src/app/api/analyze-dataset/: route.ts
frontend/src/app/api/download-dataset/: route.ts
frontend/src/app/mcp-tester/: page.tsx
frontend/src/components/: ChatComponent.tsx  McpClientTester.tsx  MleAgentComponent.tsx
frontend/src/types/: har.ts
mcp/: README.md  dataset_tools.py  evaluation_model.py  pyproject.yoml  requirements.txt  server.py
mcp/agents/: trainer.py
